# oracle_engine

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
.github/ISSUE_TEMPLATE/: config.yml  feature.yml  generic.md  perk.yml  weapon.yml
.github/workflows/: foundry.yml  npm-publish-github-packages.yml  rust.yml
boboswaggins_kitchen/build-script-src/: formula_types.rs  json_database.rs  main.rs
build_resources/: cached_build - Copy.ron  cached_build.ron  weapon_formulas.json
docs/: build.js.sample  getting_started.md  home.md
express/: index.ts
src/: d2_enums.rs  lib.rs  logging.rs  test.rs
src/abilities/: mod.rs
src/activity/: damage_calc.rs  mod.rs
src/enemies/: mod.rs
src/perks/: buff_perks.rs  exotic_armor.rs  exotic_perks.rs  lib.rs  meta_perks.rs  mod.rs  origin_perks.rs  other_perks.rs  perk_options_handler.rs  year_1_perks.rs  year_2_perks.rs  year_3_perks.rs  year_4_perks.rs  year_5_perks.rs  year_6_perks.rs  year_7_perks.rs
src/types/: formula_types.rs  js_types.rs  mod.rs  rs_types.rs
src/weapons/: dps_calc.rs  mod.rs  reserve_calc.rs  stat_calc.rs  ttk_calc.rs  weapon_constructor.rs
