[package]
name = "oracle_engine"
edition = "2021"
version = "8.2.6"
rust-version = "1.65"
repository = "https://github.com/d2foundry/oracle_engine/"
build = "build.rs"

[build-dependencies]
built = { version = "0.6", features = ["git2", "chrono", "semver"] }
serde = { version = "^1.0", features = ["derive"]}
reqwest = { version = "^0.11", features = ["json", "blocking"] }
serde_json = "^1.0"
ron = "^0.8"
phf = { version = "0.11.1", features = ["macros"] }
phf_codegen = "0.11.1"
ordered-float = {version = "= 4.1.0", features = ["serde"]}
fnv = "1.0.7"


[dev-dependencies]
num-traits = "0.2"
# wasm-bindgen-test = { version = "^0.3", optional = true }

[dependencies]
serde = { version = "^1.0", features = ["derive"]}

serde-wasm-bindgen = { version = "^0.5"}
console_error_panic_hook = { version = "0.1.7"}
wasm-bindgen = { version = "0.2.88"}

num_enum = "0.7.0"
lol_alloc = "0.4.0"
piecewise-linear = "0.2.0"



[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = "z"
